// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductView Component should allow custom inventory displays via config: custom tabs, basic inventory tables 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "initialInventoryFilters": [],
            "initialSubscriptionsInventoryFilters": [],
            "lorem": "ipsum",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={false}
            >
              <InventoryTab
                title="t(curiosity-inventory.tabInstances, {"context":"lorem"})"
              >
                <InventoryCardInstances />
              </InventoryTab>
              <InventoryTab
                title="t(curiosity-inventory.tabSubscriptions, {"context":"lorem"})"
              >
                <InventoryCardSubscriptions />
              </InventoryTab>
            </InventoryTabs>
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom inventory displays via config: custom tabs, missing inventory 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "initialInventoryFilters": undefined,
            "initialSubscriptionsInventoryFilters": [],
            "lorem": "ipsum",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={false}
            >
              <InventoryTab
                title="t(curiosity-inventory.tabSubscriptions, {"context":"lorem"})"
              >
                <InventoryCardSubscriptions />
              </InventoryTab>
            </InventoryTabs>
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom inventory displays via config: custom tabs, missing subscriptions inventory 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "initialInventoryFilters": [],
            "initialSubscriptionsInventoryFilters": undefined,
            "lorem": "ipsum",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={false}
            >
              <InventoryTab
                title="t(curiosity-inventory.tabInstances, {"context":"lorem"})"
              >
                <InventoryCardInstances />
              </InventoryTab>
            </InventoryTabs>
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom product views via productDisplay types: custom view, capacity 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productDisplay": "capacity",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom product views via productDisplay types: custom view, dual axes 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productDisplay": "dual-axes",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom product views via productDisplay types: custom view, hourly 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productDisplay": "hourly",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom product views via productDisplay types: custom view, legacy 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productDisplay": "legacy",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should allow custom product views via productDisplay types: custom view, partial 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productDisplay": "partial",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should render a basic component: basic 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns>
    <MinHeight
      isOnLoad={true}
    >
      <Context.Provider
        value={
          {
            "lorem": "ipsum",
            "productId": "lorem",
            "viewId": "viewIpsum",
          }
        }
      >
        <ProductViewOnload>
          <PageMessages
            className="curiosity-page-section__messages"
          >
            <BannerMessages />
          </PageMessages>
          <PageToolbar>
            <Toolbar />
          </PageToolbar>
          <PageSection
            className="curiosity-page-section__graphs"
          >
            <GraphCard />
          </PageSection>
          <PageSection
            className="curiosity-page-section__tabs"
          >
            <InventoryTabs
              isDisabled={true}
            />
          </PageSection>
        </ProductViewOnload>
      </Context.Provider>
    </MinHeight>
  </PageColumns>
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;

exports[`ProductView Component should render nothing if productGroup, and product parameters are empty: empty, productGroup 1`] = `null`;

exports[`ProductView Component should render nothing if productGroup, and product parameters are empty: empty, productId and viewId 1`] = `
<PageLayout>
  <PageHeader
    productLabel="lorem ipsum"
  >
    t(curiosity-view.title, {"appName":"Subscriptions","context":"lorem ipsum"})
  </PageHeader>
  <PageColumns />
  <div
    className="curiosity-page-section__version fadein"
  >
    <Button
      className="curiosity-page-section__version-link"
      component="a"
      href="https://github.com/RedHatInsights/curiosity-frontend/blob/main/CHANGELOG.md"
      isInline={true}
      target="_blank"
      variant="link"
    >
      t(curiosity-view.version, {"guiVersion":"0.0.0.0000000"})
    </Button>
  </div>
</PageLayout>
`;
